--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lista</title>
-    <link rel="stylesheet" href="styles.css">
-
+    <title>Lista de Tareas</title>
 </head>
 <body>
-    <h1>Estoy aprendiendo</h1>
+    <h1>Lista de Tareas</h1>
 
-    <img src="./img/tumblr_lwn6dbNz0V1r8tlnto1_500.webp" alt="">
+    <input type="text" id="nuevaTarea" placeholder="Ingrese una nueva tarea">
+    <button id="agregarBtn">Agregar tarea</button>
+    <h2>Tareas:</h2>
 
-    <footer>
-        
-    </footer>
+    <ul id="listaTareas"></ul>
+    <input type="number" id="indiceTarea" placeholder="Número de tarea a eliminar">
+    <button id="borrarBtn">Borrar tarea</button>
+    
+    <footer></footer>
 
-     <script src="preentrega.js"></script>
+    <script src="preentrega.js"></script>
 </body>
 </html>
